# rdg

./: =2.6.0  README.md  law_hackaton.ipynb  legal_assistant_chatbot_(1).ipynb
Front/: README.md  index.html  package-lock.json  package.json
Front/src/: App.tsx  index.css
Front/src/API/: index.ts
Front/src/pages/: index.tsx
Front/src/pages/chatPage/: index.tsx
Front/src/pages/homePage/: index.tsx
Front/src/pages/notFoundPage/: index.tsx
Front/src/pages/qrCode/: index.tsx
backend/: =4.30.0  main.py  pyproject.toml
